[package]
name = "catt"
version = "0.1.0"
authors = ["Josh Chase <jcjoshuachase@gmail.com>"]

[dependencies]
openzwave-stateful = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
mqtt3 = "*"
mqttc = "*"
netopt = "*"
mustache = "*"
lazy_static = "*"
log = "*"
shellexpand = "*"
toml = "*"
rustc-serialize = "*"
error-chain = "*"
env_logger = "*"

[[bin]]
name = "zwave"
