[workspace]

[package]
name = "catt"
version = "0.1.0"
authors = ["Josh Chase <jcjoshuachase@gmail.com>"]

[dependencies]
env_logger = "*"
log = "*"
rustc-serialize = "*"
toml = "*"
error-chain = "*"

catt-core = { path = "./catt-core" }
catt-mqtt = { path = "./catt-mqtt" }
catt-zwave = { path = "./catt-zwave" }

[[bin]]
name = "zwave"
