[workspace]

[package]
name = "catt"
version = "0.1.0"
authors = ["Josh Chase <josh@jec.pw>"]
license = "MIT/Apache-2.0"
description = "CATT executables"
keywords = ["IoT", "homeautomation", "zwave", "mqtt"]
repository = "https://github.com/catt-ha/catt-rs"

[dependencies]
env_logger = "0.3"
log = "0.3"
rustc-serialize = "0.3"
toml = "0.2"
error-chain = "0.5"
futures = "0.1"
tokio-core = "0.1"

catt-core = { path = "./catt-core", version = "0.1" }
catt-mqtt = { path = "./catt-mqtt", version = "0.1" }
catt-zwave = { path = "./catt-zwave", version = "0.1" }

[[bin]]
name = "zwave"
