[package]
name = "catt-mqtt"
version = "0.1.0"
authors = ["Josh Chase <jcjoshuachase@gmail.com>"]

[dependencies]
catt-core = { path = "../catt-core" }
error-chain = "*"
log = "*"
rustc-serialize = "*"
toml = "*"
rumqtt = { git = "https://github.com/Ather-Energy/RuMqtt.git" }

[dev-dependencies]
env_logger = "*"
