[package]
name = "catt-mqtt"
version = "0.1.0"
authors = ["Josh Chase <jcjoshuachase@gmail.com>"]

[dependencies]
catt-core = { path = "../catt-core" }
error-chain = "*"
log = "*"
rustc-serialize = "*"
toml = "*"
chrono = "*"
rumqtt = { git = "https://github.com/Ather-Energy/RuMqtt.git", rev = "f0454534cd3bed6ae637c958ec614bc41e404a94" }

[dev-dependencies]
env_logger = "*"
