[package]
name = "catt-zwave"
version = "0.1.0"
authors = ["Josh Chase <jcjoshuachase@gmail.com>"]

[dependencies]
serial_ports = { git = "https://github.com/dhylands/serial-ports-rs" }
openzwave = { git = "https://github.com/fxbox/openzwave-rust" }
catt-core = { path = "../catt-core" }
log = "*"
error-chain = "*"
rustc-serialize = "*"

[dev-dependencies]
env_logger = "*"
